# GravSaverNG-sfml-fork

./: .gitignore  CMakeLists.txt
SFML-2.5.1/src/SFML/Graphics/: Shader.cpp
examples/4d_explorer/: quaternion.glsl
examples/backwards/: backwards.glsl  quaternion.glsl
examples/crazy_blur/: crazy_blur.glsl
examples/data/: Dashboard1.glsl  color_picker.glsl  sheet1.glsl  sheet2.glsl
examples/demo/: 1_simple.glsl  2_iq_heart.glsl
examples/playground/: 3_quaternion.glsl  backwards.glsl  quaternion.glsl  self_blur.glsl
examples/progress_bar/: progress_bar.glsl
examples/quaternion/: aquaternion-backwards.glsl  aquaternion.glsl  quaternion-backwards.glsl  quaternion.glsl  test.glsl
shader_tester/src/: file_watcher.cpp  live_reloading_shader.cpp  live_reloading_shader.h  shader_header.h  shader_tester.cpp  shader_tester.h
simplefilewatcher/: CMakeLists.txt
src/: gravsaverng.cpp  gravsaverng.h  rng.h  stopwatch.h
